--- a/index1.html
+++ b/index1.html
@@ -1,20 +1,47 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <title>Example - example-email-input-directive-production</title>
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.8/angular.min.js"></script>
-  <script src="script1.js"></script>
+  <title>Exercice div formulaire</title>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.7.8/angular.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.7.8/angular-animate.js"></script>
+  <script src="script1.js">
+  </script>
 </head>
-<body ng-app="emailExample">
-    <form name="myForm" ng-controller="ExampleController">
-    <label>Email:
-      <input type="email" name="input" ng-model="email.text" required>
-    </label>
-    <div role="alert">
-      <span class="error" ng-show="myForm.input.$error.email">
-        Not valid email!</span>
-    </div>
+
+<body ng-app="formapp">
+  <style>
+    .my-form {
+      transition: all linear 0.5s;
+      background: transparent;
+    }
+
+    .my-form.ng-invalid {
+      background: red;
+    }
+
+    .my-form.ng-valid {
+      background: green;
+    }
+  </style>
+  <form name="myForm" ng-controller="FormController" class="my-form">
+    Email: <input type="email" name="input" ng-model="userType" required>
+    <span class="error" ng-show="myForm.input.$error.required">Required!</span><br>
   </form>
+  <div class="bg-danger" ng-controller="divController">
+    <p></p>Pour respecter complètement la consigne de l'exercice
+  </div>
+  <!-- Optional JavaScript -->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
+
 </html>
